SERVER-19519 Disallow creating an index with key '_fts'